-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0 Beta 3
-
None
-
macOS 10.12 (not checked others)
-
117148c381316c046b99a4ce40ab668fb7c79f11
[REG 5.9.2->5.10.0] Submenus attached to a context menu are missing the arrows indicating it has a sub menu
- duplicates
-
QTBUG-64449 Menu with key shortcut can be too short
-
- Closed
-
- is required for
-
QTCREATORBUG-19497 "Refactor" sub-menu is missing its arrow
-
- Closed
-
| For Gerrit Dashboard: QTBUG-64405 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 215127,3 | QMacStyle: Bring back submenu indicator | 5.10 | qt/qtbase | Status: MERGED | +2 | 0 |